[package]
name = "deduplicate-directories"
version = "1.0.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1"
custom_error = "1"
same-file = "1"
walkdir = "2"
