[package]
name = "deduplicate-directories"
version = "1.0.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["regex", "yaml", "wrap_help"] }
assert_matches = "1"
assure = "1"
custom_error = "1"
same-file = "1"
assertables = "*"
sixarm_assert = "1"
sixarm_collections = "1"
walkdir = "2"
